# KooRemapper

./: .gitignore  CMakeLists.txt  CMakePresets.json  DEPLOYMENT.md  IMPLEMENTATION_PLAN.md  PROGRESS.md  README.md  arc30_bent.k  arc30_flat.k  arc30_flat_fine.k  arc30_flat_tet.k  arc30_remapped.k  arc30_unfolded.k  create_presentation.py  prestress_test.csv  prestress_test.dynain  wd_bent.k  wd_flat.k  wd_flat_fine.k  wd_flat_tet.k  wd_remapped.k  wd_unfolded.k
.claude/: settings.local.json
docs/: CUSTOM_CURVE_MESH_PLAN.md  MAPPING_CONCEPT.md  STRAIN_STRESS_PLAN.md  VARIABLE_DENSITY_MESH_PLAN.md
examples/: lspost.cfile  teardrop_bent.k  teardrop_flat.k  teardrop_flat_fine.k  teardrop_mapped.k
examples/arc30/: arc30_bent.k  arc30_flat.k  arc30_flat_fine.k  arc30_flat_tet.k  arc30_mapped.k  arc30_mapped_fine.k  arc30_mapped_from_original.k  arc30_remapped.k  arc30_test_remapped.k  arc30_test_unfolded.k  arc30_unfolded.k  lspost.cfile  lspost.msg
examples/bendtwist/: bendtwist_bent.k  bendtwist_flat.k  bendtwist_flat_fine.k  lspost.cfile
examples/bulge/: bulge_bent.k  bulge_flat.k  bulge_flat_fine.k
examples/foldable_display/: foldable_bent.k  foldable_flat.k  foldable_flat_tet.k  foldable_mapped.k  foldable_mapped_tet.k  foldable_remapped.k  foldable_test_remapped.k  foldable_test_unfolded.k  foldable_unfolded.k  lspost.cfile  test_small_bent.k  test_small_flat.k  test_small_flat_fine.k
examples/taper/: taper_bent.k  taper_flat.k  taper_flat_fine.k
examples/torus/: torus_bent.k  torus_flat.k  torus_flat_fine.k  torus_strain.csv
examples/twist/: twist_bent.k  twist_flat.k  twist_flat_fine.k  twist_strain.csv
examples/wave/: lspost.cfile  wave_bent.k  wave_flat.k  wave_flat_fine.k
include/analysis/: DeformationGradient.h  ElementAnalyzer.h  MaterialModel.h  StrainCalculator.h  StrainTensor.h  StressTensor.h
include/cli/: ArgumentParser.h  ConsoleOutput.h
include/core/: Element.h  Matrix3x3.h  Mesh.h  Node.h  Platform.h  Vector3D.h
include/example/: ExampleMeshGenerator.h
include/generator/: CurveInterpolator.h  CurvedMeshGenerator.h  VariableDensityConfig.h  VariableDensityMeshGenerator.h  YamlConfigReader.h
include/grid/: BoundaryExtractor.h  ConnectivityAnalyzer.h  EdgeCalculator.h  NeutralGridGenerator.h  StructuredGridIndexer.h
include/mapper/: EdgeInterpolator.h  FaceInterpolator.h  FlatMeshGenerator.h  MeshRemapper.h  ParametricMapper.h  UnstructuredMeshAnalyzer.h
include/parser/: DynainWriter.h  KFileReader.h  KFileWriter.h
include/util/: Logger.h  Timer.h  Validator.h
scripts/: build_linux.sh  build_macos.sh  build_windows.bat  create_package.bat
src/: main.cpp
src/analysis/: DeformationGradient.cpp  ElementAnalyzer.cpp  MaterialModel.cpp  StrainCalculator.cpp  StrainTensor.cpp  StressTensor.cpp
src/cli/: ArgumentParser.cpp  ConsoleOutput.cpp
src/core/: Element.cpp  Mesh.cpp  Node.cpp  Platform.cpp  Vector3D.cpp
src/example/: ExampleMeshGenerator.cpp  ExampleMeshGenerator.cpp.bak
src/generator/: CurveInterpolator.cpp  CurvedMeshGenerator.cpp  VariableDensityMeshGenerator.cpp  YamlConfigReader.cpp
src/grid/: BoundaryExtractor.cpp  ConnectivityAnalyzer.cpp  EdgeCalculator.cpp  NeutralGridGenerator.cpp  StructuredGridIndexer.cpp
src/mapper/: EdgeInterpolator.cpp  FaceInterpolator.cpp  FlatMeshGenerator.cpp  MeshRemapper.cpp  ParametricMapper.cpp  UnstructuredMeshAnalyzer.cpp
src/parser/: DynainWriter.cpp  KFileReader.cpp  KFileWriter.cpp
src/util/: Logger.cpp  Timer.cpp  Validator.cpp
tests/: TestFramework.h  test_Interpolation.cpp  test_Mapping.cpp  test_Mesh.cpp  test_Vector3D.cpp  test_main.cpp
